Removed Float Elements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
                 <p>For Real Finaces</p>
             </div>
             <div class="nav">
-                <a href="#">Contact</a>
-                <a href="#">Pricing</a>
-                <a href="#">Product</a>
                 <a href="#">Home</a>
+                <a href="#">Prodect</a>
+                <a href="#">Pricing</a>
+                <a href="#">Contact</a>
             </div>
         </div>
         <div class="content">
